fixed copyright covering up content

--- a/guitar-studier/src/app/app.component.scss
+++ b/guitar-studier/src/app/app.component.scss
@@ -1,3 +1,13 @@
+#footer {
+    bottom: 0;
+    color: #707070;
+    height: 2em;
+    left: 0;
+    position: relative;
+    font-size: small;
+    width:100%;
+}
 
-
- 
+#body {
+    margin-bottom: 2em;
+}
